--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "format": "prettier --write \"src/**/* .{js, jsx, css, json}\" ",
     "lint": "eslint \"**/*.{js,jsx}\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "parcel src/index.html"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +15,11 @@
   "devDependencies": {
     "eslint": "^5.6.0",
     "eslint-config-prettier": "^3.1.0",
-    "eslint-plugin-prettier": "^2.7.0"
+    "eslint-plugin-prettier": "^2.7.0",
+    "parcel-bundler": "^1.10.1"
+  },
+  "dependencies": {
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2"
   }
 }
