--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,20 +1,26 @@
 {
-    "extends": [
-        "eslint:recommended",
-        "prettier",
-        "prettier/react"
-
-],
-"parserOptions": {
+  "extends": [
+    "eslint:recommended",
+    "plugin:import/errors",
+    "plugin:react/recommended",
+    "plugin:jsx-a11y/recommended",
+    "prettier",
+    "prettier/react"
+  ],
+  "rules": {
+    "react/prop-types": 0
+  },
+  "plugins": ["react", "import", "jsx-a11y"],
+  "parserOptions": {
     "ecmaVersion": 2018,
     "sourceType": "module",
     "ecmaFeatures": {
-        "jsx": true
+      "jsx": true
     }
-},
-"env": {
+  },
+  "env": {
     "es6": true,
     "node": true,
     "browser": true
-}
+  }
 }
