--- a/package.json
+++ b/package.json
@@ -13,10 +13,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-eslint": "^10.0.1",
     "eslint": "^5.6.0",
     "eslint-config-prettier": "^3.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-prettier": "^2.7.0",
-    "parcel-bundler": "^1.10.1"
+    "eslint-plugin-react": "^7.11.1",
+    "parcel-bundler": "^1.10.1",
+    "prettier": "^1.14.3"
   },
   "dependencies": {
     "react": "^16.5.2",
