Render animal name, breed and photo from API

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "format": "prettier --write \"src/**/* .{js, jsx, css, json}\" ",
-    "lint": "eslint \"**/*.{js,jsx}\"",
+    "lint": "eslint \"src/**/*.{js,jsx}\"",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "parcel src/index.html"
   },
@@ -24,6 +24,7 @@
     "prettier": "^1.14.3"
   },
   "dependencies": {
+    "petfinder-client": "0.0.3",
     "react": "^16.5.2",
     "react-dom": "^16.5.2"
   }
