--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "test": "jest",
+    "test:update": "jest -u",
     "format": "prettier --write \"src/**/* .{js, jsx, css, json}\" ",
     "lint": "eslint \"src/**/*.{js,jsx}\"",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -24,8 +26,10 @@
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-prettier": "^2.7.0",
     "eslint-plugin-react": "^7.11.1",
+    "jest": "^23.6.0",
     "parcel-bundler": "^1.10.1",
-    "prettier": "^1.14.3"
+    "prettier": "^1.14.3",
+    "react-test-renderer": "^16.6.0"
   },
   "dependencies": {
     "@reach/router": "^1.2.1",
