Extract header into separate component

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "jest",
     "test:update": "jest -u",
+    "test:watch": "jest --watch",
     "format": "prettier --write \"src/**/* .{js, jsx, css, json}\" ",
     "lint": "eslint \"src/**/*.{js,jsx}\"",
     "dev": "parcel src/index.html"
@@ -32,8 +33,10 @@
   },
   "dependencies": {
     "@reach/router": "^1.2.1",
+    "emotion": "^9.2.12",
     "petfinder-client": "0.0.3",
     "react": "^16.5.2",
-    "react-dom": "^16.5.2"
+    "react-dom": "^16.5.2",
+    "react-emotion": "^9.2.12"
   }
 }
